freest/test/prog/Invalid/Typing/IllegalChoice/IllegalChoice.fst
module IllegalChoice where

foo : +{A: Skip} -> Skip
foo c = select B c
